[package]
name = "rustyneedle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
base64 = "0.13.0"
windows = { version = "0.35.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Memory" ,
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming"
]}

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
strip = true
