[package]
name = "rustyneedle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.2", features = ["full"] }
reqwest = "0.11.14"
base64 = "0.13.0"
litcrypt = "0.3"
bytes = "1.4.0"

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_Console",
    "Win32_Security",
    "Win32_System_Memory" ,
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_Diagnostics_Debug"
]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
strip = true
